--- a/frontend_react/src/container/Footer/Footer.scss
+++ b/frontend_react/src/container/Footer/Footer.scss
@@ -7,6 +7,10 @@
   background-color: var(--bg-primary);
   /* Match the rest of the site */
   padding-bottom: 2rem;
+  padding-top: 6rem;
+  /* Added to clear floating navbar */
+  position: relative;
+  /* Context for copyright */
 
   .head-text {
     font-size: 3rem;
@@ -19,6 +23,31 @@
       color: var(--primary-color);
       font-style: italic;
       text-shadow: 0 0 10px rgba(0, 229, 255, 0.4);
+    }
+  }
+
+  /* --- COPYRIGHT --- */
+  .copyright {
+    margin-top: 3rem;
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    /* Align to right as requested, but with padding */
+    width: 100%;
+
+    p {
+      font-size: 0.85rem;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      opacity: 0.7;
+      color: var(--text-secondary);
+    }
+
+    @media screen and (max-width: 768px) {
+      align-items: center;
+      /* Center on mobile */
+      margin-top: 2rem;
     }
   }
 }
