--- a/frontend_react/src/container/Work/Work.scss
+++ b/frontend_react/src/container/Work/Work.scss
@@ -6,7 +6,15 @@
   flex-direction: column;
   background-color: var(--bg-primary);
   /* Seamless dark bg */
+  /* Seamless dark bg */
   padding-bottom: 5rem;
+  padding-top: 6rem;
+  /* Default spacing for fixed navbar */
+
+  @media screen and (max-width: 1200px) {
+    padding-top: 8rem;
+    /* Extra padding for medium devices where navbar might wrap or be taller */
+  }
 
   /* Heading Style */
   .head-text {
